[package]
name = "sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
gtk = {version="0.4.8", package="gtk4"}
nats = "0.23.1"
serde = "1.0.152"
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"